First draft of full workspace done

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -25,12 +25,11 @@
      "text": [
       "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-09-03 09:44:26.744010: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-09-03 09:44:26.759018: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-09-03 09:44:26.774742: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-09-03 09:44:26.779482: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-09-03 09:44:26.792022: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-09-04 07:42:36.464384: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-09-04 07:42:36.485950: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-09-04 07:42:36.492496: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-09-04 07:42:36.508864: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
    "metadata": {},
    "outputs": [],
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
    "metadata": {},
    "outputs": [
@@ -107,33 +106,33 @@
        "     'data': [0.002012479, 0.7653829, 12.834314, 149.31921],\n",
        "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.0, 1.0051001, 1.0034993, 0.98409724],\n",
        "        'lo_data': [1.0, 0.96406597, 1.0036646, 1.0195373]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [0.6662321, 0.9656578, 0.9974099, 0.9602834],\n",
        "        'lo_data': [1.6656798, 1.019282, 1.003821, 1.0436983]}}]},\n",
        "    {'name': 'ttbar',\n",
        "     'data': [9.635638, 3993.2388, 23286.73, 10437.047],\n",
        "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.0694268, 1.0184535, 1.0020416, 0.988056],\n",
        "        'lo_data': [0.9728497, 0.981324, 0.99724597, 1.0121633]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [0.93052167, 0.98057765, 1.0036484, 1.0027449],\n",
        "        'lo_data': [1.102705, 1.0193546, 0.99631566, 0.9968451]}}]},\n",
        "    {'name': 'ztautau',\n",
        "     'data': [1.3210382, 62.74932, 9216.265, 663597.44],\n",
        "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.0, 1.0315789, 0.9086933, 0.9901053],\n",
        "        'lo_data': [0.5, 0.9157894, 1.1045654, 1.0095873]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.0, 0.91578954, 0.9716906, 0.9719249],\n",
        "        'lo_data': [0.5, 1.0421052, 1.0258726, 1.0265634]}}]}]},\n",
        "  {'name': 'SR_binned',\n",
@@ -142,58 +141,80 @@
        "     'data': [1.0182981],\n",
        "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.2613693], 'lo_data': [0.78990513]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.0223161], 'lo_data': [0.96393085]}}]},\n",
        "    {'name': 'ttbar',\n",
        "     'data': [0.2329546],\n",
        "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.4994713], 'lo_data': [1.1251335]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.1251335], 'lo_data': [1.0]}}]},\n",
        "    {'name': 'ztautau',\n",
        "     'data': [8.586748],\n",
        "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [1.076923], 'lo_data': [0.7692308]}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
+       "       'type': 'normplusshape',\n",
        "       'data': {'hi_data': [0.923077], 'lo_data': [0.923077]}}]}]},\n",
        "  {'name': 'SR',\n",
        "   'type': 'unbinned',\n",
+       "   'weights': 'saved_datasets/asimov_weights.npy',\n",
        "   'samples': [{'name': 'htautau',\n",
-       "     'data': [1.0182981],\n",
+       "     'data': [845.22406],\n",
+       "     'ratios': 'saved_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy',\n",
        "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [1.2613693], 'lo_data': [0.78990513]}},\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [1.001748],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_JES_Up/ratio_JES_Up.npy',\n",
+       "        'lo_data': [0.99743104],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_JES_Dn/ratio_JES_Dn.npy'}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [1.0223161], 'lo_data': [0.96393085]}}]},\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [1.0070639],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_TES_Up/ratio_TES_Up.npy',\n",
+       "        'lo_data': [0.99221694],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_TES_Dn/ratio_TES_Dn.npy'}}]},\n",
        "    {'name': 'ttbar',\n",
-       "     'data': [0.2329546],\n",
+       "     'data': [5293.148],\n",
+       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy',\n",
        "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [1.4994713], 'lo_data': [1.1251335]}},\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [0.99586004],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_JES_Up/ratio_JES_Up.npy',\n",
+       "        'lo_data': [1.0061986],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_JES_Dn/ratio_JES_Dn.npy'}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [1.1251335], 'lo_data': [1.0]}}]},\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [0.993805],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_TES_Up/ratio_TES_Up.npy',\n",
+       "        'lo_data': [1.0069877],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy'}}]},\n",
        "    {'name': 'ztautau',\n",
-       "     'data': [8.586748],\n",
+       "     'data': [328834.12],\n",
+       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ttbar/ratio_ztautau.npy',\n",
        "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [1.076923], 'lo_data': [0.7692308]}},\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [1.0224828],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_JES_Up/ratio_JES_Up.npy',\n",
+       "        'lo_data': [0.97777224],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_JES_Dn/ratio_JES_Dn.npy'}},\n",
        "      {'name': 'TES',\n",
-       "       'type': 'histosys',\n",
-       "       'data': {'hi_data': [0.923077], 'lo_data': [0.923077]}}]}]}],\n",
+       "       'type': 'normplusshape',\n",
+       "       'data': {'hi_data': [1.0574694],\n",
+       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_TES_Up/ratio_TES_Up.npy',\n",
+       "        'lo_data': [0.945667],\n",
+       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_TES_Dn/ratio_TES_Dn.npy'}}]}]}],\n",
        " 'measurements': [{'name': 'higgs_tautau_signal_strength',\n",
        "   'config': {'parameters': [{'name': 'mu_htautau',\n",
        "      'inits': [1],\n",
@@ -204,7 +225,7 @@
        " 'version': '1.0.0'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
