--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -248,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi_env_newish",
+   "display_name": "nsbi_env",
    "language": "python",
    "name": "nsbi_env"
   },
@@ -262,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
