--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -199,27 +199,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['tree_htautau;1', 'tree_ztautau;1', 'tree_ttbar;1']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = uproot.open(\"saved_datasets/dataset_nominal.root\")\n",
-    "list(f.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
@@ -511,7 +490,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi_env_newish",
+   "display_name": "nsbi_env",
    "language": "python",
    "name": "nsbi_env"
   },
@@ -525,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
