Bug fixes in model, added pip to pixi

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -15,30 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-09-04 07:42:36.464384: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-09-04 07:42:36.485950: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-09-04 07:42:36.492496: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-09-04 07:42:36.508864: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, importlib\n",
     "# sys.path.append('../')\n",
     "\n",
     "import nsbi_common_utils\n",
-    "from nsbi_common_utils import plotting, training, inference, datasets, configuration, workspace_builder\n",
+    "from nsbi_common_utils import plotting, training, \\\n",
+    "inference, datasets, configuration, workspace_builder, model\n",
     "import glob\n",
     "import numpy as np\n",
     "\n",
@@ -67,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "96620280-2323-4d43-8a64-41ec1961f431",
    "metadata": {},
    "outputs": [],
@@ -80,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
    "metadata": {},
    "outputs": [],
@@ -88,14 +75,28 @@
     "importlib.reload(sys.modules['nsbi_common_utils.workspace_builder'])\n",
     "from nsbi_common_utils import workspace_builder\n",
     "\n",
-    "workspace = nsbi_common_utils.workspace_builder.WorkspaceBuilder(config_path = './config.yml')"
+    "workspace_builder = nsbi_common_utils.workspace_builder.WorkspaceBuilder(config_path = './config.yml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "workspace = workspace_builder.build()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2f8b69c5-a799-4138-b9ab-827becdd397c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -225,13 +226,40 @@
        " 'version': '1.0.0'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "workspace.build()"
+    "workspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "14b7ebc5-50c6-4bce-9b3b-d7ba3bc99df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 4, got 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[47]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m importlib.reload(sys.modules[\u001b[33m'\u001b[39m\u001b[33mnsbi_common_utils.model\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnsbi_common_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m workspace = \u001b[43mnsbi_common_utils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                                          \u001b[49m\u001b[43mmeasurement_to_fit\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mhiggs_tautau_signal_strength\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/model.py:54\u001b[39m, in \u001b[36mModel.__init__\u001b[39m\u001b[34m(self, workspace, measurement_to_fit)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mself\u001b[39m.unbinned_total_dict, \\\n\u001b[32m     49\u001b[39m     \u001b[38;5;28mself\u001b[39m.ratios_array_dict                      = \u001b[38;5;28mself\u001b[39m._get_nominal_expected_arrays(\u001b[38;5;28mtype\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     51\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_binned, \\\n\u001b[32m     52\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_binned                 = \u001b[38;5;28mself\u001b[39m._get_systematic_data(\u001b[38;5;28mtype\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33mbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_unbinned, \\\n\u001b[32m     55\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_unbinned, \\\n\u001b[32m     56\u001b[39m         \u001b[38;5;28mself\u001b[39m.combined_tot_up_unbinned, \\\n\u001b[32m     57\u001b[39m             \u001b[38;5;28mself\u001b[39m.combined_tot_dn_unbinned       = \u001b[38;5;28mself\u001b[39m._get_systematic_data(\u001b[38;5;28mtype\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     59\u001b[39m \u001b[38;5;28mself\u001b[39m.weight_arrays_unbinned                     = \u001b[38;5;28mself\u001b[39m._get_asimov_weights_array( \u001b[38;5;28mtype\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m )\n\u001b[32m     60\u001b[39m \u001b[38;5;28mself\u001b[39m.expected_hist                              = \u001b[38;5;28mself\u001b[39m._get_expected_hist(param_vec = \u001b[38;5;28mself\u001b[39m.initial_parameter_values)\n",
+      "\u001b[31mValueError\u001b[39m: not enough values to unpack (expected 4, got 2)"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(sys.modules['nsbi_common_utils.model'])\n",
+    "from nsbi_common_utils import model\n",
+    "\n",
+    "workspace = nsbi_common_utils.model.Model(workspace = workspace, \n",
+    "                                          measurement_to_fit = 'higgs_tautau_signal_strength')"
    ]
   },
   {
@@ -901,9 +929,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi_env",
+   "display_name": "Python (pixi: nsbi-env-gpu)",
    "language": "python",
-   "name": "nsbi_env"
+   "name": "nsbi-env-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -915,7 +943,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
