--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "96620280-2323-4d43-8a64-41ec1961f431",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
    "metadata": {
     "scrolled": true
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "2f8b69c5-a799-4138-b9ab-827becdd397c",
    "metadata": {
     "scrolled": true
@@ -202,7 +202,7 @@
        "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy'}}]},\n",
        "    {'name': 'ztautau',\n",
        "     'data': [328834.12],\n",
-       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ttbar/ratio_ztautau.npy',\n",
+       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
        "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
        "      {'name': 'JES',\n",
        "       'type': 'normplusshape',\n",
@@ -226,7 +226,7 @@
        " 'version': '1.0.0'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,62 +237,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "id": "14b7ebc5-50c6-4bce-9b3b-d7ba3bc99df9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 4, got 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[47]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m importlib.reload(sys.modules[\u001b[33m'\u001b[39m\u001b[33mnsbi_common_utils.model\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnsbi_common_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m workspace = \u001b[43mnsbi_common_utils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                                          \u001b[49m\u001b[43mmeasurement_to_fit\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mhiggs_tautau_signal_strength\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/model.py:54\u001b[39m, in \u001b[36mModel.__init__\u001b[39m\u001b[34m(self, workspace, measurement_to_fit)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mself\u001b[39m.unbinned_total_dict, \\\n\u001b[32m     49\u001b[39m     \u001b[38;5;28mself\u001b[39m.ratios_array_dict                      = \u001b[38;5;28mself\u001b[39m._get_nominal_expected_arrays(\u001b[38;5;28mtype\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     51\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_binned, \\\n\u001b[32m     52\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_binned                 = \u001b[38;5;28mself\u001b[39m._get_systematic_data(\u001b[38;5;28mtype\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33mbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_unbinned, \\\n\u001b[32m     55\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_unbinned, \\\n\u001b[32m     56\u001b[39m         \u001b[38;5;28mself\u001b[39m.combined_tot_up_unbinned, \\\n\u001b[32m     57\u001b[39m             \u001b[38;5;28mself\u001b[39m.combined_tot_dn_unbinned       = \u001b[38;5;28mself\u001b[39m._get_systematic_data(\u001b[38;5;28mtype\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     59\u001b[39m \u001b[38;5;28mself\u001b[39m.weight_arrays_unbinned                     = \u001b[38;5;28mself\u001b[39m._get_asimov_weights_array( \u001b[38;5;28mtype\u001b[39m = \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m )\n\u001b[32m     60\u001b[39m \u001b[38;5;28mself\u001b[39m.expected_hist                              = \u001b[38;5;28mself\u001b[39m._get_expected_hist(param_vec = \u001b[38;5;28mself\u001b[39m.initial_parameter_values)\n",
-      "\u001b[31mValueError\u001b[39m: not enough values to unpack (expected 4, got 2)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(sys.modules['nsbi_common_utils.model'])\n",
     "from nsbi_common_utils import model\n",
     "\n",
-    "workspace = nsbi_common_utils.model.Model(workspace = workspace, \n",
+    "model_obj = nsbi_common_utils.model.Model(workspace = workspace, \n",
     "                                          measurement_to_fit = 'higgs_tautau_signal_strength')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "id": "f324e1f3-c29e-458b-b0e6-ad42cc9389ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_parameters, initial_parameter_values = model_obj.get_model_parameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "5c78db4c-d960-4214-a791-15462d90f98c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_parameter_values_mod = jnp.array([0.5, 1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "291c5e88-0921-4b98-8340-768cb6a1ba8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(-11112.71175691, dtype=float64)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_obj.model(initial_parameter_values_mod) - model_obj.model(initial_parameter_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "f20798c8-c16f-49b7-bb53-6249a617e006",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'cpu'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "jax.default_backend()"
+    "importlib.reload(sys.modules['nsbi_common_utils.inference'])\n",
+    "\n",
+    "nsbi_common_utils.inference.perform_fit(model_obj.model, \n",
+    "                                        initial_parameter_values, \n",
+    "                                        list_parameters)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2911a387-09ea-44da-ad82-f19e960a9129",
    "metadata": {},
    "outputs": [],
@@ -303,19 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dfeaa3c6-560a-46fd-ac40-13ebb6877300",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['SR_binned', 'CR']\n",
-      "['SR']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# path prefix for general save directory\n",
     "path_prefix = config['path_prefix']\n",
