inference bug fix in model, calibration changes

--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "import matplotlib.pyplot as plt\n",
     "import yaml\n",
     "\n",
-    "from nsbi_common_utils.inference import nsbi_inference\n",
+    "from nsbi_common_utils.inference import inference\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=RuntimeWarning)\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 108,
    "id": "96620280-2323-4d43-8a64-41ec1961f431",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 109,
    "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
    "metadata": {
     "scrolled": true
@@ -92,152 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2f8b69c5-a799-4138-b9ab-827becdd397c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'channels': [{'name': 'CR',\n",
-       "   'type': 'binned',\n",
-       "   'samples': [{'name': 'htautau',\n",
-       "     'data': [0.002012479, 0.7653829, 12.834314, 149.31921],\n",
-       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0, 1.0051001, 1.0034993, 0.98409724],\n",
-       "        'lo_data': [1.0, 0.96406597, 1.0036646, 1.0195373]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [0.6662321, 0.9656578, 0.9974099, 0.9602834],\n",
-       "        'lo_data': [1.6656798, 1.019282, 1.003821, 1.0436983]}}]},\n",
-       "    {'name': 'ttbar',\n",
-       "     'data': [9.635638, 3993.2388, 23286.73, 10437.047],\n",
-       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0694268, 1.0184535, 1.0020416, 0.988056],\n",
-       "        'lo_data': [0.9728497, 0.981324, 0.99724597, 1.0121633]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [0.93052167, 0.98057765, 1.0036484, 1.0027449],\n",
-       "        'lo_data': [1.102705, 1.0193546, 0.99631566, 0.9968451]}}]},\n",
-       "    {'name': 'ztautau',\n",
-       "     'data': [1.3210382, 62.74932, 9216.265, 663597.44],\n",
-       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0, 1.0315789, 0.9086933, 0.9901053],\n",
-       "        'lo_data': [0.5, 0.9157894, 1.1045654, 1.0095873]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0, 0.91578954, 0.9716906, 0.9719249],\n",
-       "        'lo_data': [0.5, 1.0421052, 1.0258726, 1.0265634]}}]}]},\n",
-       "  {'name': 'SR_binned',\n",
-       "   'type': 'binned',\n",
-       "   'samples': [{'name': 'htautau',\n",
-       "     'data': [1.0182981],\n",
-       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.2613693], 'lo_data': [0.78990513]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0223161], 'lo_data': [0.96393085]}}]},\n",
-       "    {'name': 'ttbar',\n",
-       "     'data': [0.2329546],\n",
-       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.4994713], 'lo_data': [1.1251335]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.1251335], 'lo_data': [1.0]}}]},\n",
-       "    {'name': 'ztautau',\n",
-       "     'data': [8.586748],\n",
-       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.076923], 'lo_data': [0.7692308]}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [0.923077], 'lo_data': [0.923077]}}]}]},\n",
-       "  {'name': 'SR',\n",
-       "   'type': 'unbinned',\n",
-       "   'weights': 'saved_datasets/asimov_weights.npy',\n",
-       "   'samples': [{'name': 'htautau',\n",
-       "     'data': [845.22406],\n",
-       "     'ratios': 'saved_data/output_training_nominal/output_ratios_htautau/ratio_htautau.npy',\n",
-       "     'modifiers': [{'name': 'mu_htautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.001748],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_JES_Up/ratio_JES_Up.npy',\n",
-       "        'lo_data': [0.99743104],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_JES_Dn/ratio_JES_Dn.npy'}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0070639],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_TES_Up/ratio_TES_Up.npy',\n",
-       "        'lo_data': [0.99221694],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_htautau_TES_Dn/ratio_TES_Dn.npy'}}]},\n",
-       "    {'name': 'ttbar',\n",
-       "     'data': [5293.148],\n",
-       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy',\n",
-       "     'modifiers': [{'name': 'mu_ttbar', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [0.99586004],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_JES_Up/ratio_JES_Up.npy',\n",
-       "        'lo_data': [1.0061986],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_JES_Dn/ratio_JES_Dn.npy'}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [0.993805],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_TES_Up/ratio_TES_Up.npy',\n",
-       "        'lo_data': [1.0069877],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ttbar_TES_Dn/ratio_TES_Dn.npy'}}]},\n",
-       "    {'name': 'ztautau',\n",
-       "     'data': [328834.12],\n",
-       "     'ratios': 'saved_data/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "     'modifiers': [{'name': 'mu_ztautau', 'data': None, 'type': 'normfactor'},\n",
-       "      {'name': 'JES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0224828],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_JES_Up/ratio_JES_Up.npy',\n",
-       "        'lo_data': [0.97777224],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_JES_Dn/ratio_JES_Dn.npy'}},\n",
-       "      {'name': 'TES',\n",
-       "       'type': 'normplusshape',\n",
-       "       'data': {'hi_data': [1.0574694],\n",
-       "        'hi_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_TES_Up/ratio_TES_Up.npy',\n",
-       "        'lo_data': [0.945667],\n",
-       "        'lo_ratio': 'saved_data/output_training_systematics/output_ratios_ztautau_TES_Dn/ratio_TES_Dn.npy'}}]}]}],\n",
-       " 'measurements': [{'name': 'higgs_tautau_signal_strength',\n",
-       "   'config': {'parameters': [{'name': 'mu_htautau',\n",
-       "      'inits': [1],\n",
-       "      'bounds': [[0, 10]]},\n",
-       "     {'name': 'mu_ztautau', 'inits': [1], 'bounds': [[0, 10]]},\n",
-       "     {'name': 'mu_ttbar', 'inits': [1], 'bounds': [[0, 10]]}],\n",
-       "    'poi': 'mu_htautau'}}],\n",
-       " 'version': '1.0.0'}"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "workspace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "14b7ebc5-50c6-4bce-9b3b-d7ba3bc99df9",
    "metadata": {},
    "outputs": [],
@@ -251,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 105,
    "id": "f324e1f3-c29e-458b-b0e6-ad42cc9389ed",
    "metadata": {},
    "outputs": [],
@@ -261,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "id": "5c78db4c-d960-4214-a791-15462d90f98c",
    "metadata": {},
    "outputs": [],
@@ -271,17 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "id": "291c5e88-0921-4b98-8340-768cb6a1ba8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(-11112.71175691, dtype=float64)"
+       "Array(18.99909808, dtype=float64)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,26 +159,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 51,
    "id": "f20798c8-c16f-49b7-bb53-6249a617e006",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(sys.modules['nsbi_common_utils.inference'])\n",
+    "\n",
+    "inference_obj = nsbi_common_utils.inference.inference(model_obj.model, \n",
+    "                                                      initial_parameter_values, \n",
+    "                                                      list_parameters)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2bce18df-4ff9-46ec-9635-ccbd5120f132",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "fit: \n",
+      " ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "│                                Migrad                                   │\n",
+      "├──────────────────────────────────┬──────────────────────────────────────┤\n",
+      "│ FCN = -1.884e+07                 │              Nfcn = 84               │\n",
+      "│ EDM = 3.38e-05 (Goal: 0.0002)    │           time = 11.5 sec            │\n",
+      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
+      "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
+      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
+      "│      No parameters at limit      │           Below call limit           │\n",
+      "├──────────────────────────────────┼──────────────────────────────────────┤\n",
+      "│             Hesse ok             │         Covariance accurate          │\n",
+      "└──────────────────────────────────┴──────────────────────────────────────┘\n",
+      "┌───┬────────────┬───────────┬───────────┬────────────┬────────────┬─────────┬─────────┬───────┐\n",
+      "│   │ Name       │   Value   │ Hesse Err │ Minos Err- │ Minos Err+ │ Limit-  │ Limit+  │ Fixed │\n",
+      "├───┼────────────┼───────────┼───────────┼────────────┼────────────┼─────────┼─────────┼───────┤\n",
+      "│ 0 │ mu_htautau │   2.64    │   0.29    │            │            │         │         │       │\n",
+      "│ 1 │ mu_ttbar   │   0.995   │   0.007   │            │            │         │         │       │\n",
+      "│ 2 │ mu_ztautau │  0.9999   │  0.0012   │            │            │         │         │       │\n",
+      "└───┴────────────┴───────────┴───────────┴────────────┴────────────┴─────────┴─────────┴───────┘\n",
+      "┌────────────┬──────────────────────────────────┐\n",
+      "│            │ mu_htautau   mu_ttbar mu_ztautau │\n",
+      "├────────────┼──────────────────────────────────┤\n",
+      "│ mu_htautau │      0.086   -0.29e-3    -0.2e-6 │\n",
+      "│   mu_ttbar │   -0.29e-3   4.55e-05    -1.0e-6 │\n",
+      "│ mu_ztautau │    -0.2e-6    -1.0e-6   1.54e-06 │\n",
+      "└────────────┴──────────────────────────────────┘\n"
      ]
     }
    ],
    "source": [
-    "importlib.reload(sys.modules['nsbi_common_utils.inference'])\n",
-    "\n",
-    "nsbi_common_utils.inference.perform_fit(model_obj.model, \n",
-    "                                        initial_parameter_values, \n",
-    "                                        list_parameters)\n"
+    "inference_obj.perform_fit()\n"
    ]
   },
   {
