--- a/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
+++ b/FAIR_universe_Higgs_tautau/Preselection_withNN.ipynb
@@ -673,7 +673,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi-env-gpu-2",
+   "display_name": "Python (pixi: nsbi-env-gpu)",
    "language": "python",
    "name": "nsbi-env-gpu"
   },
@@ -687,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
