--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -25,10 +25,10 @@
      "text": [
       "/home/jsandesara_umass_edu/NSBI-workflow-tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-10-22 10:01:49.232767: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-10-22 10:01:49.347384: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-10-22 10:01:49.399579: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-10-22 10:01:50.309557: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-10-23 01:05:18.642129: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-10-23 01:05:18.776457: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-10-23 01:05:18.822938: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-10-23 01:05:19.573133: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "87d5bc53-25ef-40e2-b3f0-98e8117d5f4f",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "e783c1db-f3d1-4f0c-9ef8-55e7a381a1fd",
    "metadata": {
     "scrolled": true
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "2f8b69c5-a799-4138-b9ab-827becdd397c",
    "metadata": {
     "scrolled": true
@@ -241,12 +241,14 @@
        "      'inits': [1],\n",
        "      'bounds': [[0, 10]]},\n",
        "     {'name': 'mu_ztautau', 'inits': [1], 'bounds': [[0, 10]]},\n",
-       "     {'name': 'mu_ttbar', 'inits': [1], 'bounds': [[0, 10]]}],\n",
+       "     {'name': 'mu_ttbar', 'inits': [1], 'bounds': [[0, 10]]},\n",
+       "     {'name': 'JES', 'inits': [0]},\n",
+       "     {'name': 'TES', 'inits': [0]}],\n",
        "    'poi': 'mu_htautau'}}],\n",
        " 'version': '1.0.0'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,15 +259,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "14b7ebc5-50c6-4bce-9b3b-d7ba3bc99df9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (1943888,) into shape (1933320,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m importlib.reload(sys.modules[\u001b[33m'\u001b[39m\u001b[33mnsbi_common_utils.model\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnsbi_common_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m model\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m model_obj = \u001b[43mnsbi_common_utils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43mModel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43mworkspace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m                                          \u001b[49m\u001b[43mmeasurement_to_fit\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mhiggs_tautau_signal_strength\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/model.py:57\u001b[39m, in \u001b[36mModel.__init__\u001b[39m\u001b[34m(self, workspace, measurement_to_fit)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mself\u001b[39m.unbinned_total_dict, \\\n\u001b[32m     49\u001b[39m     \u001b[38;5;28mself\u001b[39m.ratios_array_dict                      = \u001b[38;5;28mself\u001b[39m._get_nominal_expected_arrays( type_of_fit = \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m )\n\u001b[32m     51\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_binned, \\\n\u001b[32m     52\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_binned                 = \u001b[38;5;28mself\u001b[39m._get_systematic_data( type_of_fit=\u001b[33m\"\u001b[39m\u001b[33mbinned\u001b[39m\u001b[33m\"\u001b[39m )\n\u001b[32m     54\u001b[39m \u001b[38;5;28mself\u001b[39m.combined_var_up_unbinned, \\\n\u001b[32m     55\u001b[39m     \u001b[38;5;28mself\u001b[39m.combined_var_dn_unbinned, \\\n\u001b[32m     56\u001b[39m         \u001b[38;5;28mself\u001b[39m.combined_tot_up_unbinned, \\\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m             \u001b[38;5;28mself\u001b[39m.combined_tot_dn_unbinned       = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_systematic_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mtype_of_fit\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43munbinned\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     59\u001b[39m \u001b[38;5;28mself\u001b[39m.weight_arrays_unbinned                     = \u001b[38;5;28mself\u001b[39m._get_asimov_weights_array()\n\u001b[32m     60\u001b[39m \u001b[38;5;28mself\u001b[39m.expected_hist                              = \u001b[38;5;28mself\u001b[39m._get_expected_hist(param_vec = \u001b[38;5;28mself\u001b[39m.initial_parameter_values)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/NSBI-workflow-tutorial/src/nsbi_common_utils/model.py:428\u001b[39m, in \u001b[36mModel._get_systematic_data\u001b[39m\u001b[34m(self, type_of_fit)\u001b[39m\n\u001b[32m    425\u001b[39m     var_up_array_syst       = np.append(var_up_array_syst, var_array_up_channel)\n\u001b[32m    426\u001b[39m     var_dn_array_syst       = np.append(var_dn_array_syst, var_array_dn_channel)\n\u001b[32m--> \u001b[39m\u001b[32m428\u001b[39m \u001b[43mcombined_var_up\u001b[49m\u001b[43m[\u001b[49m\u001b[43msample_name\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcount\u001b[49m\u001b[43m]\u001b[49m = jnp.array(var_up_array_syst)\n\u001b[32m    429\u001b[39m combined_var_dn[sample_name][count] = jnp.array(var_dn_array_syst)\n\u001b[32m    431\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m type_of_fit == \u001b[33m\"\u001b[39m\u001b[33munbinned\u001b[39m\u001b[33m\"\u001b[39m:\n",
+      "\u001b[31mValueError\u001b[39m: could not broadcast input array from shape (1943888,) into shape (1933320,)"
      ]
     }
    ],
