Bug fixes in processing notebooks

--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -31,6 +31,7 @@
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
+    "import HiggsML\n",
     "from HiggsML.systematics import systematics\n",
     "hep.style.use(hep.style.ATLAS)\n",
     "\n",
@@ -46,10 +47,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-29 11:24:18,515 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
-      "2025-08-29 11:24:18,516 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
-      "2025-08-29 11:24:18,532 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
-      "2025-08-29 11:24:18,532 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+      "2025-10-24 13:55:43,652 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-10-24 13:55:43,657 - HiggsML.datasets     - INFO     - Current working directory: /home/jsandesara_umass_edu/NSBI-workflow-tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-10-24 13:55:43,890 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-10-24 13:55:43,892 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
      ]
     }
    ],
@@ -66,8 +67,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-29 11:24:33,809 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
-      "2025-08-29 11:28:25,893 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
+      "2025-10-24 13:55:52,463 - HiggsML.datasets     - INFO     - Selected train size: 53924279\n",
+      "2025-10-24 14:02:08,068 - HiggsML.datasets     - INFO     - Data loaded successfully\n"
      ]
     }
    ],
@@ -114,9 +115,9 @@
      "data": {
       "text/plain": [
        "detailed_labels\n",
-       "ztautau    34427442\n",
-       "htautau    17849501\n",
-       "ttbar       1517669\n",
+       "ztautau    34428457\n",
+       "htautau    17848101\n",
+       "ttbar       1517806\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -198,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saved_datasets = \"./saved_datasets/\""
+    "saved_datasets = \"./saved_datasets_new/\""
    ]
   },
   {
@@ -248,9 +249,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nsbi_env",
+   "display_name": "Python (pixi: nsbi-env-gpu-new-new)",
    "language": "python",
-   "name": "nsbi_env"
+   "name": "nsbi-env-gpu-ne-neww"
   },
   "language_info": {
    "codemirror_mode": {
