--- a/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
+++ b/FAIR_universe_Higgs_tautau/Parameter_Fitting_with_Systematics.ipynb
@@ -518,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pixi: nsbi-env-gpu)",
+   "display_name": "Python (pixi: nsbi-env-gpu-new-higgs)",
    "language": "python",
    "name": "nsbi-env-gpu"
   },
