Bug fixes for full new workflow

--- a/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Loader.ipynb
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saved_datasets = \"./saved_datasets_new/\""
+    "saved_datasets = \"./saved_datasets/\""
    ]
   },
   {
@@ -249,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pixi: nsbi-env-gpu-new-new)",
+   "display_name": "Python (pixi: nsbi-env-gpu-new-new-new)",
    "language": "python",
    "name": "nsbi-env-gpu-ne-neww"
   },
